<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_phone_in_talk_black_24dp"
            android:title="@string/calls" />
        <item
            android:id="@+id/nav_money"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/money_in_calls" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/contacts_list" />
    </group>

    <item android:title="@string/user_profile">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/user_account" />

        </menu>
    </item>

</menu>
