<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/services_page"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8.0dip"
            android:background="@android:color/white"
            android:shrinkColumns="1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip">

               <!-- <ImageButton
                    android:id="@+id/btn_99"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="onClick"
                    android:src="@drawable/ic_btn_99_ok_9"
                    android:visibility="invisible" />-->
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/call_99"
                    fab:fab_colorNormal="@color/blue_accent0"
                    fab:fab_colorPressed="@color/blue_accent1"
                    fab:fab_icon="@mipmap/ic_map_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8.0dip"
                    android:background="@drawable/cuadro_azul"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/MS_Titles2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_99_title"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/MS_Bodies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_99_desc"
                        android:textAppearance="?android:textAppearanceSmall" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip">

                <!--<ImageButton
                    android:id="@+id/btn_222"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="onClick"
                    android:src="@drawable/ic_btn_222_ok_4"
                    android:visibility="invisible" />-->

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/query_balance"
                    fab:fab_colorNormal="@color/blue_accent0"
                    fab:fab_colorPressed="@color/blue_accent1"
                    fab:fab_icon="@mipmap/ic_map_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8.0dip"
                    android:background="@drawable/cuadro_azul"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView02"
                        style="@style/MS_Titles2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_222_title"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:id="@+id/TextView01"
                        style="@style/MS_Bodies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_222_desc"
                        android:textAppearance="?android:textAppearanceSmall" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip">

                <!--<ImageButton
                    android:id="@+id/btn_31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="onClick"
                    android:src="@drawable/ic_btn_31_ok_4"
                    android:visibility="invisible" />
-->
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/call_anonymous"
                    fab:fab_colorNormal="@color/blue_accent0"
                    fab:fab_colorPressed="@color/blue_accent1"
                    fab:fab_icon="@mipmap/ic_map_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8.0dip"
                    android:background="@drawable/cuadro_azul"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView04"
                        style="@style/MS_Titles2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_31_title"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:id="@+id/TextView03"
                        style="@style/MS_Bodies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/ms_31_desc"
                        android:textAppearance="?android:textAppearanceSmall" />
                </LinearLayout>
            </TableRow>

            <!--<TableRow-->
            <!--android:id="@+id/tableRow3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="8.0dip"-->
            <!--android:layout_marginTop="8.0dip">-->

            <!--<ImageButton-->
            <!--android:id="@+id/btn_31"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:onClick="onClick"-->
            <!--android:src="@drawable/ic_btn_31_ok_4"-->
            <!--android:visibility="invisible" />-->

            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="8.0dip"-->
            <!--android:orientation="vertical"-->
            <!--android:background="@drawable/cuadro_azul">-->

            <!--<TextView-->
            <!--android:id="@+id/TextView04"-->
            <!--style="@style/MS_Titles2"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/ms_31_title"-->
            <!--android:textAppearance="?android:textAppearanceMedium" />-->

            <!--<TextView-->
            <!--android:id="@+id/TextView03"-->
            <!--style="@style/MS_Bodies"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/ms_31_desc"-->
            <!--android:textAppearance="?android:textAppearanceSmall" />-->
            <!--</LinearLayout>-->
            <!--</TableRow>-->
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/table"
            android:background="#FFB388FF">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_btn_sec"
                android:layout_marginTop="@dimen/margin_btn_sec"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_transferir_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:src="@drawable/help_96" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_text_sec"
                    android:layout_marginRight="@dimen/margin_text_sec"
                    android:layout_marginTop="@dimen/margin_text_sec"
                    android:gravity="center"
                    android:text="@string/ms_transeferir_desc"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/desc_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/triangle_services" />

                <LinearLayout
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_btn_sec"
                android:layout_marginTop="@dimen/margin_btn_sec"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_recargar_movil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:src="@drawable/help_96" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_text_sec"
                    android:layout_marginRight="@dimen/margin_text_sec"
                    android:layout_marginTop="@dimen/margin_text_sec"
                    android:gravity="center"
                    android:text="@string/ms_recargar_desc"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/desc_text_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>